# VIATOR-OpenTripPlanner-demonstrator

./: .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  LICENSE  NOTICE  README.md  VIATOR-strategy.md  VIATOR-technical-spec.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  trackonpath_OTP_VNC
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  ops_incident.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker.yml  release.yml
alembic/: README.md  env.py
alembic/versions/: 20260427_2200_initial_schema.py  20260429_0700_journey_exec_snapshot_nullable.py  20260503_0700_user_credentials.py  20260503_0900_nap_catalogues.py  20260505_1500_network_coverage.py  20260505_2200_network_coverage_hubs.py  20260520_1300_upload_provider_feed.py  20260521_1200_rebuild_max_memory.py  20260529_1400_coverage_fanout_mode.py  20260618_0900_session_engine.py  20260628_1100_coverage_country_filter.py  20260629_2200_verify_external.py  20260630_1500_coverage_window.py  20260701_0900_oebb_alignment.py  20260704_1000_hub_modes.py  20260704_1000_hub_transport_modes.py
app/: audit.py  concurrency.py  config_schema.py  config_service.py  credentials.py  db.py  detect.py  graph_snapshots.py  gtfs_cross_border_filter.py  inbox_sweep.py  ingestion.py  logging_config.py  main.py  metrics.py  osm_filter.py  osm_geo.py  otp_api_timeout.py  otp_heap.py  otp_start_period.py  otp_timezone.py  rate_limit.py  retention.py  router_config.py  security.py  sessions_orchestrator.py  settings.py  staleness.py  templating.py  tracing.py  worker.py
app/api/: coverage_share.py  credentials.py  geocode.py  journey.py  pages.py  reports.py
app/auth/: email.py  grafana_role_map.py  passwords.py  tokens.py
app/data/: country_borders.geojson
app/journey/: federated_planner.py  hafas_client.py  motis_client.py  ojp_client.py  otp_client.py  recorder.py  (+3 more)
branding/: VIATOR-brand-brief.md
ci/: README.md  trivy-config-ignore.rego
docker/: .env.example  INSTALL.md  README.md  docker-compose.yml
docs/: SNCF_OTP_Session_user_guide.md  VIATOR_Federation_Strategy.md  admin-guide.md  audit-2026-05.md  cross-border-routing-as-built.md  cross-nap-federation-design.md  eu19-compliance-summary.md  eu19-providers.md  federated-planner-design.md  journey-comparison-implementation.md  multi-country-runbook.md  nap-ch-rail.md  nap-fr-rail.md  netex-fr-converter-design.md  ojp-reference-comparison-design.md  osm-geographic-scope-design.md  provider-source-modes-design.md
motis-spike/: .gitignore  README.md  compare.py  config.example.yml  docker-compose.yml
scripts/: check_osm_merge_files.sh  create_eu19_transit_motis_session.ps1  create_eurostar_corridor_session.ps1  merge_osm_eu19_corridor.sh  merge_osm_eurostar_corridor.sh  patch_deploy_audit_retry.sh
tests/: conftest.py
(+163 files in other folders)
